# mycelia

./: .gitignore  LICENSE  Makefile  pyproject.toml
docs/: README.md  docker-compose.yaml  example.py
docs/examples/: arguments.py  background.py  background_return.py  cancel.py  control_flow.py  dependencies.py  dependencies_multiple.py  dependencies_nested.py  dependencies_parallel.py  dependencies_reuse.py  errors.py  hello_world.py  pause.py
src/mycelia/: __init__.py  tracing.py  utils.py
src/mycelia/core/: entities.py  errors.py  interactor.py
src/mycelia/domains/graphs/: entities.py  errors.py  interactors.py
src/mycelia/domains/nodes/: entities.py  interactors.py
src/mycelia/interface/: common.py  executor.py  instance.py
src/mycelia/presenters/: main.py
src/mycelia/services/: executor.py
src/mycelia/services/broker/: interface.py  local.py  rabbitmq.py
src/mycelia/services/executor/: interface.py  local.py
src/mycelia/services/storage/: interface.py  local.py
src/mycelia/services/storage/postgres/: __init__.py  instance.py  types.py
src/mycelia/services/storage/postgres/migrations/: __init__.py  env.py  script.py.mako
src/mycelia/services/storage/postgres/migrations/versions/: 036e6694cae0_indices.py  797c81c201d2_init.py
src/mycelia/services/storage/postgres/tables/: __init__.py  base.py  dependencies.py  graphs.py  nodes.py  sessions.py
